@@ -5,27 +5,41 @@ import com.restaurant.quanlydatbannhahang.entity.Ban;
 import com.restaurant.quanlydatbannhahang.entity.TrangThaiBan;
 
 import java.util.List;
+import java.util.regex.Pattern;
 
 public class BanService {
     private BanDAO banDAO;
+
+    private static final String MABAN_PATTERN = "^B\\d{3}$";
+    private static final Pattern maBanPattern = Pattern.compile(MABAN_PATTERN);
 
     public BanService() {
         this.banDAO = new BanDAO();
     }
 
     /**
-     * Thêm bàn mới
+     * Validate đối tượng Ban
      */
-    public void themBan(Ban ban) {
+    public void validateBan(Ban ban) {
         if (ban == null) {
-            throw new IllegalArgumentException("Bàn không được để trống");
+            throw new IllegalArgumentException("Đối tượng bàn không được để trống");
         }
-        if (ban.getMaBan() == null || ban.getMaBan().trim().isEmpty()) {
+        if (ban.getMaBan() == null || ban.getMaBan().isBlank()) {
             throw new IllegalArgumentException("Mã bàn không được để trống");
+        }
+        if (!maBanPattern.matcher(ban.getMaBan()).matches()) {
+            throw new IllegalArgumentException("Mã bàn phải có dạng Bxxx (ví dụ: B001)");
         }
         if (ban.getSoGhe() <= 0) {
             throw new IllegalArgumentException("Số ghế phải lớn hơn 0");
         }
+    }
+
+    /**
+     * Thêm bàn mới
+     */
+    public void themBan(Ban ban) {
+        validateBan(ban);
         if (banDAO.themBan(ban)) {
             System.out.println(" Thêm bàn thành công");
         } else {
@@ -37,8 +51,11 @@ public class BanService {
      * Lấy bàn theo mã
      */
     public Ban getBanTheoMa(String maBan) {
-        if (maBan == null || maBan.trim().isEmpty()) {
+        if (maBan == null || maBan.isBlank()) {
             throw new IllegalArgumentException("Mã bàn không được để trống");
+        }
+        if (!maBanPattern.matcher(maBan).matches()) {
+            throw new IllegalArgumentException("Mã bàn phải có dạng Bxxx (ví dụ: B001)");
         }
         Ban ban = banDAO.getBanTheoMa(maBan);
         if (ban == null) {
@@ -58,7 +75,7 @@ public class BanService {
      * Lấy bàn theo khu vực
      */
     public List<Ban> getBanTheoKhuVuc(String maKhuVuc) {
-        if (maKhuVuc == null || maKhuVuc.trim().isEmpty()) {
+        if (maKhuVuc == null || maKhuVuc.isBlank()) {
             throw new IllegalArgumentException("Mã khu vực không được để trống");
         }
         return banDAO.getBanTheoKhuVuc(maKhuVuc);
@@ -82,15 +99,7 @@ public class BanService {
      * Cập nhật thông tin bàn
      */
     public void capNhatBan(Ban ban) {
-    	 if (ban == null) {
-             throw new IllegalArgumentException("Bàn không được để trống");
-         }
-         if (ban.getMaBan() == null || ban.getMaBan().trim().isEmpty()) {
-             throw new IllegalArgumentException("Mã bàn không được để trống");
-         }
-         if (ban.getSoGhe() <= 0) {
-             throw new IllegalArgumentException("Số ghế phải lớn hơn 0");
-         }
+        validateBan(ban);
         if (banDAO.capNhatBan(ban)) {
             System.out.println(" Cập nhật bàn thành công");
         } else {
@@ -102,8 +111,11 @@ public class BanService {
      * Xóa bàn
      */
     public void xoaBan(String maBan) {
-        if (maBan == null || maBan.trim().isEmpty()) {
+        if (maBan == null || maBan.isBlank()) {
             throw new IllegalArgumentException("Mã bàn không được để trống");
+        }
+        if (!maBanPattern.matcher(maBan).matches()) {
+            throw new IllegalArgumentException("Mã bàn phải có dạng Bxxx (ví dụ: B001)");
         }
         if (banDAO.xoaBan(maBan)) {
             System.out.println(" Xóa bàn thành công");
@@ -116,8 +128,11 @@ public class BanService {
      * Cập nhật trạng thái bàn
      */
     public void capNhatTrangThaiBan(String maBan, TrangThaiBan trangThai) {
-        if (maBan == null || maBan.trim().isEmpty()) {
+        if (maBan == null || maBan.isBlank()) {
             throw new IllegalArgumentException("Mã bàn không được để trống");
+        }
+        if (!maBanPattern.matcher(maBan).matches()) {
+            throw new IllegalArgumentException("Mã bàn phải có dạng Bxxx (ví dụ: B001)");
         }
         if (trangThai == null) {
             throw new IllegalArgumentException("Trạng thái bàn không được để trống");
@@ -152,11 +167,10 @@ public class BanService {
      */
     public void suDungBan(String maBan) {
         Ban ban = getBanTheoMa(maBan);
-        if (ban != null && ban.getTrangThai() != TrangThaiBan.TRONG) {
-            capNhatTrangThaiBan(maBan, TrangThaiBan.DANG_DUNG);
-        } else {
+        if (ban == null || ban.getTrangThai() == TrangThaiBan.TRONG) {
             throw new IllegalArgumentException("Bàn không hợp lệ để sử dụng");
         }
+        capNhatTrangThaiBan(maBan, TrangThaiBan.DANG_DUNG);
     }
 
     /**
@@ -165,13 +179,6 @@ public class BanService {
     public void giaiphongBan(String maBan) {
         capNhatTrangThaiBan(maBan, TrangThaiBan.TRONG);
     }
-
-    /**
-     * Lấy mã bàn cuối cùng để sinh mã tiếp theo
-     * 
-     * @return Mã bàn cuối cùng (VD: B005) hoặc null nếu bảng rỗng
-     */
-    public String getLastBanID() {
-        return banDAO.getLastBanID();
-    }
 }
+
+   
