@@ -6,20 +6,60 @@ import com.restaurant.quanlydatbannhahang.entity.TrangThaiKhuyenMai;
 
 import java.time.LocalDate;
 import java.util.List;
+import java.util.regex.Pattern;
 
 public class KhuyenMaiService {
     private KhuyenMaiDAO khuyenMaiDAO;
+
+    private static final String MAKM_PATTERN = "^KM\\d{3}$";
+    private static final Pattern maKMPattern = Pattern.compile(MAKM_PATTERN);
 
     public KhuyenMaiService() {
         this.khuyenMaiDAO = new KhuyenMaiDAO();
     }
 
     /**
+     * Validate đối tượng KhuyenMai
+     */
+    public void validateKhuyenMai(KhuyenMai khuyenMai) {
+        if (khuyenMai == null) {
+            throw new IllegalArgumentException("Đối tượng khuyến mại không được để trống");
+        }
+        if (khuyenMai.getMaKM() == null || khuyenMai.getMaKM().isBlank()) {
+            throw new IllegalArgumentException("Mã khuyến mại không được để trống");
+        }
+        if (!maKMPattern.matcher(khuyenMai.getMaKM()).matches()) {
+            throw new IllegalArgumentException("Mã khuyến mại phải có dạng KMxxx (ví dụ: KM001)");
+        }
+        if (khuyenMai.getTenKM() == null || khuyenMai.getTenKM().isBlank()) {
+            throw new IllegalArgumentException("Tên khuyến mại không được để trống");
+        }
+        if (khuyenMai.getGiaTriGiam() < 0) {
+            throw new IllegalArgumentException("Giá trị giảm phải lớn hơn hoặc bằng 0");
+        }
+        if (khuyenMai.getNgayBatDau() == null || khuyenMai.getNgayKetThuc() == null) {
+            throw new IllegalArgumentException("Ngày bắt đầu và ngày kết thúc không được để trống");
+        }
+        if (khuyenMai.getNgayKetThuc().isBefore(khuyenMai.getNgayBatDau())) {
+            throw new IllegalArgumentException("Ngày kết thúc phải sau hoặc bằng ngày bắt đầu");
+        }
+        if (khuyenMai.getDieuKienToiThieu() < 0) {
+            throw new IllegalArgumentException("Điều kiện tối thiểu phải lớn hơn hoặc bằng 0");
+        }
+        if (khuyenMai.getTrangThai() == null) {
+            throw new IllegalArgumentException("Trạng thái khuyến mại không được để trống");
+        }
+    }
+
+    /**
      * Lấy khuyến mại theo mã
      */
     public KhuyenMai getKhuyenMaiTheoMa(String maKM) {
-        if (maKM == null || maKM.trim().isEmpty()) {
+        if (maKM == null || maKM.isBlank()) {
             throw new IllegalArgumentException("Mã khuyến mại không được để trống");
+        }
+        if (!maKMPattern.matcher(maKM).matches()) {
+            throw new IllegalArgumentException("Mã khuyến mại phải có dạng KMxxx (ví dụ: KM001)");
         }
         KhuyenMai km = khuyenMaiDAO.getKhuyenMaiTheoMa(maKM);
         if (km == null) {
@@ -46,18 +86,7 @@ public class KhuyenMaiService {
      * Thêm khuyến mại mới
      */
     public void themKhuyenMai(KhuyenMai khuyenMai) {
-        if (khuyenMai == null) {
-            throw new IllegalArgumentException("Khuyến mại không được để trống");
-        }
-        if (khuyenMai.getMaKM() == null || khuyenMai.getMaKM().trim().isEmpty()) {
-            throw new IllegalArgumentException("Mã khuyến mại không được để trống");
-        }
-        if (khuyenMai.getTenKM() == null || khuyenMai.getTenKM().trim().isEmpty()) {
-            throw new IllegalArgumentException("Tên khuyến mại không được để trống");
-        }
-        if (khuyenMai.getGiaTriGiam() < 0) {
-            throw new IllegalArgumentException("Giá trị giảm phải lớn hơn hoặc bằng 0");
-        }
+        validateKhuyenMai(khuyenMai);
         if (khuyenMaiDAO.themKhuyenMai(khuyenMai)) {
             System.out.println(" Thêm khuyến mại thành công");
         } else {
@@ -69,9 +98,7 @@ public class KhuyenMaiService {
      * Cập nhật khuyến mại
      */
     public void capNhatKhuyenMai(KhuyenMai khuyenMai) {
-        if (khuyenMai == null) {
-            throw new IllegalArgumentException("Khuyến mại không được để trống");
-        }
+        validateKhuyenMai(khuyenMai);
         if (khuyenMaiDAO.capNhatKhuyenMai(khuyenMai)) {
             System.out.println(" Cập nhật khuyến mại thành công");
         } else {
@@ -83,8 +110,11 @@ public class KhuyenMaiService {
      * Xóa khuyến mại
      */
     public void xoaKhuyenMai(String maKM) {
-        if (maKM == null || maKM.trim().isEmpty()) {
+        if (maKM == null || maKM.isBlank()) {
             throw new IllegalArgumentException("Mã khuyến mại không được để trống");
+        }
+        if (!maKMPattern.matcher(maKM).matches()) {
+            throw new IllegalArgumentException("Mã khuyến mại phải có dạng KMxxx (ví dụ: KM001)");
         }
         if (khuyenMaiDAO.xoaKhuyenMai(maKM)) {
             System.out.println(" Xóa khuyến mại thành công");
@@ -97,6 +127,15 @@ public class KhuyenMaiService {
      * Cập nhật trạng thái khuyến mại
      */
     public void capNhatTrangThaiKhuyenMai(String maKM, TrangThaiKhuyenMai trangThai) {
+        if (maKM == null || maKM.isBlank()) {
+            throw new IllegalArgumentException("Mã khuyến mại không được để trống");
+        }
+        if (!maKMPattern.matcher(maKM).matches()) {
+            throw new IllegalArgumentException("Mã khuyến mại phải có dạng KMxxx (ví dụ: KM001)");
+        }
+        if (trangThai == null) {
+            throw new IllegalArgumentException("Trạng thái khuyến mại không được để trống");
+        }
         KhuyenMai km = getKhuyenMaiTheoMa(maKM);
         if (km != null) {
             km.setTrangThai(trangThai);
@@ -128,6 +167,20 @@ public class KhuyenMaiService {
     }
 
     /**
+     * Kiểm tra khuyến mại có hiệu lực tại một thời điểm nhất định
+     */
+    public boolean isKhuyenMaiHieuLuc(String maKM, LocalDate ngayHienTai) {
+        if (ngayHienTai == null) {
+            throw new IllegalArgumentException("Ngày kiểm tra hiệu lực không được để trống");
+        }
+        KhuyenMai khuyenMai = getKhuyenMaiTheoMa(maKM);
+        if (khuyenMai == null) {
+            return false;
+        }
+        return khuyenMai.kiemTraHieuLuc(ngayHienTai);
+    }
+
+    /**
      * Tính tổng số khuyến mại
      */
     public int getTotalKhuyenMai() {
@@ -147,12 +200,10 @@ public class KhuyenMaiService {
 
     /**
      * Lấy mã khuyến mại cuối cùng để sinh mã tiếp theo
-     * 
+     *
      * @return Mã khuyến mại cuối cùng (VD: KM000) hoặc null nếu bảng rỗng
      */
     public String getLastKhuyenMaiID() {
         return khuyenMaiDAO.getLastKhuyenMaiID();
     }
-
-	
 }
